--- a/Intro/CTA200 Final Project Assignment.ipynb
+++ b/Intro/CTA200 Final Project Assignment.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 1"
+    "# Question 1 (Equation of Stellar Structue)"
    ]
   },
   {
@@ -326,8 +326,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question "
+    "# Question 2 (Equation of State)\n",
+    "## Part A"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simple analytic EOS\n",
+    "gam = 4/3\n",
+    "p = e**gam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
