Final Project: answering the questions

--- a/Intro/CTA200 Final Project Assignment.ipynb
+++ b/Intro/CTA200 Final Project Assignment.ipynb
@@ -1302,32 +1302,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Solutions to the rest of the questions - some of the code is in the tov_integrator.ipynb section"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Question 3 (TOV Star)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The full integration has been shown above."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Question 4 (Many pressures)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part A\n",
+    "Refer to tov_integrator.ipynb for the first integration. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part B\n",
+    "The maximum mass along the TOV sequence is around 2 $M_{\\odot}$. This has been identified on the plot with a orange dot. The maximum central energy density that can be achived has also bee ouputted. The value approximately makes sense since it is higher than unity. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part C\n",
+    "There should be a minimum mass beyond which neutron stars should not exist. The minimum energy density has also been shown. <font color='red'>I find it a bit weird that the minimum central energy density is more than unity, but I suppose the center of the neutron star is very dense, so this is a reasonable assumption to make.</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 5 (Many EOS & Observations)\n",
+    "## Part A\n",
+    "This has been done in the tov integrator code. MPA1 seems to be the most suitable model. HQC is immediately restricted out. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part B\n",
+    "The EOS predict that the radius of a 1.4 $M_{\\odot}$ star must be between around 11.5 and 13 (rough estimate). THE MPA1 model is the most compatible with the radius of PSR J0030+0451 which is 13.02. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part C\n"
+   ]
   }
  ],
  "metadata": {
