EOD Taylor Series Push

--- a/Intro/CTA200 Final Project Assignment.ipynb
+++ b/Intro/CTA200 Final Project Assignment.ipynb
@@ -1374,7 +1374,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part C\n"
+    "## Part C\n",
+    "The mass-radius measurements have been added. "
    ]
   }
  ],
