--- a/Intro/Taylor Expansion of TOV (Initial Conditions) .ipynb
+++ b/Intro/Taylor Expansion of TOV (Initial Conditions) .ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dpdr = -G*e*M/((c*r)**2) * (1 + p/e)*(1+(4*pi*r**3*p)/(M*c**2))/(1-2*G*M/(c**2))\n",
+    "dpdr = -G*e*M/(c**2) * (1 + p/e)*(1+(4*pi*r**3*p)/(M*c**2))/(r**2-2*G*M*r/(c**2))\n",
     "# Make Dimensionless\n",
     "dpdr = simplify(dpdr.subs({G:1, c:1}))"
    ]
@@ -46,10 +46,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{\\left(M + 4 \\pi p r^{3}\\right) \\left(e + p\\right)}{r^{2} \\left(2 M - 1\\right)}$"
+       "$\\displaystyle \\frac{\\left(M + 4 \\pi p r^{3}\\right) \\left(e + p\\right)}{r \\left(2 M - r\\right)}$"
       ],
       "text/plain": [
-       "(M + 4*pi*p*r**3)*(e + p)/(r**2*(2*M - 1))"
+       "(M + 4*pi*p*r**3)*(e + p)/(r*(2*M - r))"
       ]
      },
      "metadata": {},
@@ -83,15 +83,30 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\delta{r}$"
+      ],
+      "text/plain": [
+       "\\delta{r}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "eps = symbols(\"\\epsilon\")\n",
     "e0, e1, e2 = symbols(\"e_0 e_1 e_2\")\n",
     "p0, p1, p2 = symbols(\"p_0 p_1 p_2\")\n",
     "m0, m1, m2 = symbols(\"m_0 m_1 m_2\")\n",
-    "r0 = symbols(\"r_0\")\n",
     "e_exp = e0 \n",
-    "r_exp = r0"
+    "r_exp = symbols(\"\\delta{r}\")\n",
+    "r0 = r_exp\n",
+    "r_exp"
    ]
   },
   {
@@ -102,10 +117,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle 4 \\pi e_{0} r_{0}^{3}$"
+       "$\\displaystyle 4 \\pi \\delta{r}^{3} e_{0}$"
       ],
       "text/plain": [
-       "4*pi*e_0*r_0**3"
+       "4*pi*\\delta{r}**3*e_0"
       ]
      },
      "metadata": {},
@@ -120,19 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle r_{0} \\left(- 4 \\pi e_{0}^{2} - 8 \\pi e_{0} p_{0} - 4 \\pi p_{0}^{2}\\right) + O\\left(r_{0}^{2}\\right)$"
+       "$\\displaystyle \\delta{r}^{2} \\left(- 4 \\pi e_{0}^{2} - 8 \\pi e_{0} p_{0} - 4 \\pi p_{0}^{2}\\right) + \\delta{r}^{4} \\left(- 32 \\pi^{2} e_{0}^{3} - 64 \\pi^{2} e_{0}^{2} p_{0} - 32 \\pi^{2} e_{0} p_{0}^{2}\\right) + O\\left(\\delta{r}^{6}\\right)$"
       ],
       "text/plain": [
-       "r_0*(-4*pi*e_0**2 - 8*pi*e_0*p_0 - 4*pi*p_0**2) + O(r_0**2)"
+       "\\delta{r}**2*(-4*pi*e_0**2 - 8*pi*e_0*p_0 - 4*pi*p_0**2) + \\delta{r}**4*(-32*pi**2*e_0**3 - 64*pi**2*e_0**2*p_0 - 32*pi**2*e_0*p_0**2) + O(\\delta{r}**6)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,32 +155,10 @@
    "source": [
     "p_exp = p0 \n",
     "m_exp = m0 \n",
-    "exprB = dpdr.subs({p: p_exp, e:e_exp, r:r_exp, M:m_exp}) #+ O(1)\n",
-    "exprB.series(r0) + O(r0**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle O\\left(r_{0}^{2}\\right)$"
-      ],
-      "text/plain": [
-       "O(r_0**2)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_init = exprB * r_exp \n",
-    "p_init.series(r0) + O(r0**2)"
+    "exprB = dpdr.subs({p: p_exp, e:e_exp, r:r_exp, M:m_exp})\n",
+    "# exprB.series(r_exp) \n",
+    "p_init = exprB * r_exp # P = dpdr * r\n",
+    "p_init.series(r_exp)"
    ]
   },
   {
@@ -177,31 +170,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eps = symbols(\"\\epsilon\")\n",
-    "e0, e1, e2 = symbols(\"e_0 e_1 e_2\")\n",
-    "p0, p1, p2 = symbols(\"p_0 p_1 p_2\")\n",
-    "m0, m1, m2 = symbols(\"m_0 m_1 m_2\")\n",
-    "r0 = symbols(\"r_0\")\n",
-    "e_exp = e0 + e1 * r0 \n",
-    "r_exp = r0"
+    "e_exp = e0 + e1 * r_exp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle 4 \\pi r_{0}^{3} \\left(e_{0} + e_{1} r_{0}\\right)$"
+       "$\\displaystyle 4 \\pi \\delta{r}^{3} \\left(\\delta{r} e_{1} + e_{0}\\right)$"
       ],
       "text/plain": [
-       "4*pi*r_0**3*(e_0 + e_1*r_0)"
+       "4*pi*\\delta{r}**3*(\\delta{r}*e_1 + e_0)"
       ]
      },
      "metadata": {},
@@ -216,16 +203,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{m_{1} p_{0}}{2 m_{1} - 1} + \\frac{e_{0} m_{1}}{2 m_{1} - 1} + \\delta{r} \\left(\\frac{e_{1} m_{1}}{2 m_{1} - 1} + \\frac{m_{1} p_{1}}{2 m_{1} - 1}\\right) + \\delta{r}^{2} \\left(- \\frac{8 \\pi e_{0}^{2} m_{1}}{\\left(2 m_{1} - 1\\right)^{2}} + \\frac{4 \\pi e_{0}^{2}}{2 m_{1} - 1} - \\frac{8 \\pi e_{0} m_{1} p_{0}}{\\left(2 m_{1} - 1\\right)^{2}} + \\frac{8 \\pi e_{0} p_{0}}{2 m_{1} - 1} + \\frac{4 \\pi p_{0}^{2}}{2 m_{1} - 1}\\right) + O\\left(\\delta{r}^{3}\\right)$"
+      ],
+      "text/plain": [
+       "m_1*p_0/(2*m_1 - 1) + e_0*m_1/(2*m_1 - 1) + \\delta{r}*(e_1*m_1/(2*m_1 - 1) + m_1*p_1/(2*m_1 - 1)) + \\delta{r}**2*(-8*pi*e_0**2*m_1/(2*m_1 - 1)**2 + 4*pi*e_0**2/(2*m_1 - 1) - 8*pi*e_0*m_1*p_0/(2*m_1 - 1)**2 + 8*pi*e_0*p_0/(2*m_1 - 1) + 4*pi*p_0**2/(2*m_1 - 1)) + O(\\delta{r}**3)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_exp = p0 + p1 * r_exp\n",
+    "m_exp = m0 + m1 * r_exp\n",
+    "exprB = dpdr.subs({p: p_exp, e:e_exp, r:r_exp, M:m_exp}) #+ O(1)\n",
+    "# exprB.series(r_exp) + O(r_exp**2)\n",
+    "p_init = exprB * r_exp \n",
+    "p_init.series(r_exp) + O(r_exp**3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### From this we can tell that $p_1 = e_1 = 0$, $m_1 = 1$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle p_{0} + e_{0} + \\delta{r}^{2} \\left(- 4 \\pi e_{0}^{2} + 4 \\pi p_{0}^{2}\\right) + O\\left(\\delta{r}^{3}\\right)$"
+      ],
+      "text/plain": [
+       "p_0 + e_0 + \\delta{r}**2*(-4*pi*e_0**2 + 4*pi*p_0**2) + O(\\delta{r}**3)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_init.series(r_exp).subs({p1:0, e1:0, m1:1}) + O(r_exp**3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Is this the expansion we want? For some reason setting $e_o = 0$ gives us the following. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{- e_{0} m_{1} - m_{1} p_{0}}{r_{0}} + r_{0} \\left(- 4 \\pi e_{0}^{2} - 4 e_{0} m_{1}^{3} - 8 \\pi e_{0} p_{0} - 2 e_{1} m_{1}^{2} - e_{2} m_{1} - 4 m_{1}^{3} p_{0} - 2 m_{1}^{2} p_{1} - 4 \\pi p_{0}^{2}\\right) + r_{0}^{2} \\left(- 8 \\pi e_{0}^{2} m_{1} - 8 \\pi e_{0} e_{1} - 16 \\pi e_{0} m_{1} p_{0} + e_{0} m_{1} \\left(- 8 \\pi e_{0} - 8 m_{1}^{3}\\right) - 8 \\pi e_{0} p_{1} - 4 e_{1} m_{1}^{3} - 8 \\pi e_{1} p_{0} - 2 e_{2} m_{1}^{2} - 4 m_{1}^{3} p_{1} - 8 \\pi m_{1} p_{0}^{2} + m_{1} p_{0} \\left(- 8 \\pi e_{0} - 8 m_{1}^{3}\\right) - 8 \\pi p_{0} p_{1}\\right) - m_{1} p_{1} - 2 m_{1}^{2} p_{0} - e_{1} m_{1} - 2 e_{0} m_{1}^{2} + O\\left(r_{0}^{3}\\right)$"
+       "$\\displaystyle p_{0} + 4 \\pi \\delta{r}^{2} p_{0}^{2} + O\\left(\\delta{r}^{3}\\right)$"
       ],
       "text/plain": [
-       "(-e_0*m_1 - m_1*p_0)/r_0 + r_0*(-4*pi*e_0**2 - 4*e_0*m_1**3 - 8*pi*e_0*p_0 - 2*e_1*m_1**2 - e_2*m_1 - 4*m_1**3*p_0 - 2*m_1**2*p_1 - 4*pi*p_0**2) + r_0**2*(-8*pi*e_0**2*m_1 - 8*pi*e_0*e_1 - 16*pi*e_0*m_1*p_0 + e_0*m_1*(-8*pi*e_0 - 8*m_1**3) - 8*pi*e_0*p_1 - 4*e_1*m_1**3 - 8*pi*e_1*p_0 - 2*e_2*m_1**2 - 4*m_1**3*p_1 - 8*pi*m_1*p_0**2 + m_1*p_0*(-8*pi*e_0 - 8*m_1**3) - 8*pi*p_0*p_1) - m_1*p_1 - 2*m_1**2*p_0 - e_1*m_1 - 2*e_0*m_1**2 + O(r_0**3)"
+       "p_0 + 4*pi*\\delta{r}**2*p_0**2 + O(\\delta{r}**3)"
       ]
      },
      "execution_count": 23,
@@ -234,34 +286,7 @@
     }
    ],
    "source": [
-    "p_exp = p0 + p1 * r0\n",
-    "m_exp = m0 + m1 * r0\n",
-    "exprB = dpdr.subs({p: p_exp, e:e_exp, r:r_exp, M:m_exp}) #+ O(1)\n",
-    "exprB.series(r0) + O(r0**3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle r_{0} \\left(- 2 e_{0} m_{1}^{2} - e_{1} m_{1} - 2 m_{1}^{2} p_{0} - m_{1} p_{1}\\right) + r_{0}^{2} \\left(- 4 \\pi e_{0}^{2} - 4 e_{0} m_{1}^{3} - 8 \\pi e_{0} p_{0} - 2 e_{1} m_{1}^{2} - e_{2} m_{1} - 4 m_{1}^{3} p_{0} - 2 m_{1}^{2} p_{1} - 4 \\pi p_{0}^{2}\\right) - m_{1} p_{0} - e_{0} m_{1} + O\\left(r_{0}^{3}\\right)$"
-      ],
-      "text/plain": [
-       "r_0*(-2*e_0*m_1**2 - e_1*m_1 - 2*m_1**2*p_0 - m_1*p_1) + r_0**2*(-4*pi*e_0**2 - 4*e_0*m_1**3 - 8*pi*e_0*p_0 - 2*e_1*m_1**2 - e_2*m_1 - 4*m_1**3*p_0 - 2*m_1**2*p_1 - 4*pi*p_0**2) - m_1*p_0 - e_0*m_1 + O(r_0**3)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_init = exprB * r_exp \n",
-    "p_init.series(r0) + O(r0**3)"
+    "p_init.series(r_exp).subs({p1:0, e1:0, m1:1, e0:0}) + O(r_exp**3)"
    ]
   },
   {
@@ -273,31 +298,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eps = symbols(\"\\epsilon\")\n",
-    "e0, e1, e2 = symbols(\"e_0 e_1 e_2\")\n",
-    "p0, p1, p2 = symbols(\"p_0 p_1 p_2\")\n",
-    "m0, m1, m2 = symbols(\"m_0 m_1 m_2\")\n",
-    "r0 = symbols(\"r_0\")\n",
-    "e_exp = e0 + e1 * r0 + e2 * r0**2\n",
-    "r_exp = r0"
+    "e_exp = e0 + e1 * r_exp + e2 * r_exp**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle 4 \\pi r_{0}^{3} \\left(e_{0} + e_{1} r_{0} + e_{2} r_{0}^{2}\\right)$"
+       "$\\displaystyle 4 \\pi \\delta{r}^{3} \\left(\\delta{r}^{2} e_{2} + \\delta{r} e_{1} + e_{0}\\right)$"
       ],
       "text/plain": [
-       "4*pi*r_0**3*(e_0 + e_1*r_0 + e_2*r_0**2)"
+       "4*pi*\\delta{r}**3*(\\delta{r}**2*e_2 + \\delta{r}*e_1 + e_0)"
       ]
      },
      "metadata": {},
@@ -312,52 +331,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{- e_{0} m_{1} - m_{1} p_{0}}{r_{0}} + r_{0} \\left(- 4 \\pi e_{0}^{2} - 2 e_{0} m_{1} m_{2} + e_{0} m_{1} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 8 \\pi e_{0} p_{0} - 2 e_{1} m_{1}^{2} - e_{1} m_{2} - e_{2} m_{1} - 2 m_{1}^{2} p_{1} - 2 m_{1} m_{2} p_{0} + m_{1} p_{0} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - m_{1} p_{2} - m_{2} p_{1} - 4 \\pi p_{0}^{2}\\right) + r_{0}^{2} \\left(- 8 \\pi e_{0}^{2} m_{1} - 8 \\pi e_{0} e_{1} - 16 \\pi e_{0} m_{1} p_{0} + e_{0} m_{1} \\left(- 8 \\pi e_{0} - 8 m_{1}^{3} - 8 m_{1} m_{2}\\right) + e_{0} m_{2} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 8 \\pi e_{0} p_{1} - 2 e_{1} m_{1} m_{2} + e_{1} m_{1} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 8 \\pi e_{1} p_{0} - 2 e_{2} m_{1}^{2} - e_{2} m_{2} - 2 m_{1}^{2} p_{2} - 2 m_{1} m_{2} p_{1} - 8 \\pi m_{1} p_{0}^{2} + m_{1} p_{0} \\left(- 8 \\pi e_{0} - 8 m_{1}^{3} - 8 m_{1} m_{2}\\right) + m_{1} p_{1} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) + m_{2} p_{0} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - m_{2} p_{2} - 8 \\pi p_{0} p_{1}\\right) + r_{0}^{3} \\left(4 \\pi e_{0}^{2} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 16 \\pi e_{0} e_{1} m_{1} - 8 \\pi e_{0} e_{2} - 16 \\pi e_{0} m_{1} p_{1} + e_{0} m_{1} \\left(- 32 \\pi e_{0} m_{1} - 8 \\pi e_{1} - 16 m_{1}^{4} - 24 m_{1}^{2} m_{2} - 4 m_{2}^{2}\\right) + e_{0} m_{2} \\left(- 8 \\pi e_{0} - 8 m_{1}^{3} - 8 m_{1} m_{2}\\right) + 8 \\pi e_{0} p_{0} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 8 \\pi e_{0} p_{2} - 4 \\pi e_{1}^{2} - 16 \\pi e_{1} m_{1} p_{0} + e_{1} m_{1} \\left(- 8 \\pi e_{0} - 8 m_{1}^{3} - 8 m_{1} m_{2}\\right) + e_{1} m_{2} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 8 \\pi e_{1} p_{1} - 2 e_{2} m_{1} m_{2} + e_{2} m_{1} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 8 \\pi e_{2} p_{0} - 2 m_{1} m_{2} p_{2} - 16 \\pi m_{1} p_{0} p_{1} + m_{1} p_{0} \\left(- 32 \\pi e_{0} m_{1} - 8 \\pi e_{1} - 16 m_{1}^{4} - 24 m_{1}^{2} m_{2} - 4 m_{2}^{2}\\right) + m_{1} p_{1} \\left(- 8 \\pi e_{0} - 8 m_{1}^{3} - 8 m_{1} m_{2}\\right) + m_{1} p_{2} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) + m_{2} p_{0} \\left(- 8 \\pi e_{0} - 8 m_{1}^{3} - 8 m_{1} m_{2}\\right) + m_{2} p_{1} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) + 4 \\pi p_{0}^{2} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 8 \\pi p_{0} p_{2} - 4 \\pi p_{1}^{2}\\right) - m_{2} p_{0} - m_{1} p_{1} - 2 m_{1}^{2} p_{0} - e_{1} m_{1} - e_{0} m_{2} - 2 e_{0} m_{1}^{2} + O\\left(r_{0}^{4}\\right)$"
+       "$\\displaystyle \\frac{m_{1} p_{0}}{2 m_{1} - 1} + \\frac{e_{0} m_{1}}{2 m_{1} - 1} + \\delta{r} \\left(- \\frac{2 e_{0} m_{1} m_{2}}{\\left(2 m_{1} - 1\\right)^{2}} + \\frac{e_{0} m_{2}}{2 m_{1} - 1} + \\frac{e_{1} m_{1}}{2 m_{1} - 1} - \\frac{2 m_{1} m_{2} p_{0}}{\\left(2 m_{1} - 1\\right)^{2}} + \\frac{m_{1} p_{1}}{2 m_{1} - 1} + \\frac{m_{2} p_{0}}{2 m_{1} - 1}\\right) + \\delta{r}^{2} \\left(\\frac{4 \\pi e_{0}^{2}}{2 m_{1} - 1} + \\frac{e_{0} m_{1} \\left(- \\frac{8 \\pi e_{0}}{2 m_{1} - 1} + \\frac{4 m_{2}^{2}}{\\left(2 m_{1} - 1\\right)^{2}}\\right)}{2 m_{1} - 1} - \\frac{2 e_{0} m_{2}^{2}}{\\left(2 m_{1} - 1\\right)^{2}} + \\frac{8 \\pi e_{0} p_{0}}{2 m_{1} - 1} - \\frac{2 e_{1} m_{1} m_{2}}{\\left(2 m_{1} - 1\\right)^{2}} + \\frac{e_{1} m_{2}}{2 m_{1} - 1} + \\frac{e_{2} m_{1}}{2 m_{1} - 1} - \\frac{2 m_{1} m_{2} p_{1}}{\\left(2 m_{1} - 1\\right)^{2}} + \\frac{m_{1} p_{0} \\left(- \\frac{8 \\pi e_{0}}{2 m_{1} - 1} + \\frac{4 m_{2}^{2}}{\\left(2 m_{1} - 1\\right)^{2}}\\right)}{2 m_{1} - 1} + \\frac{m_{1} p_{2}}{2 m_{1} - 1} - \\frac{2 m_{2}^{2} p_{0}}{\\left(2 m_{1} - 1\\right)^{2}} + \\frac{m_{2} p_{1}}{2 m_{1} - 1} + \\frac{4 \\pi p_{0}^{2}}{2 m_{1} - 1}\\right) + O\\left(\\delta{r}^{3}\\right)$"
       ],
       "text/plain": [
-       "(-e_0*m_1 - m_1*p_0)/r_0 + r_0*(-4*pi*e_0**2 - 2*e_0*m_1*m_2 + e_0*m_1*(-4*m_1**2 - 2*m_2) - 8*pi*e_0*p_0 - 2*e_1*m_1**2 - e_1*m_2 - e_2*m_1 - 2*m_1**2*p_1 - 2*m_1*m_2*p_0 + m_1*p_0*(-4*m_1**2 - 2*m_2) - m_1*p_2 - m_2*p_1 - 4*pi*p_0**2) + r_0**2*(-8*pi*e_0**2*m_1 - 8*pi*e_0*e_1 - 16*pi*e_0*m_1*p_0 + e_0*m_1*(-8*pi*e_0 - 8*m_1**3 - 8*m_1*m_2) + e_0*m_2*(-4*m_1**2 - 2*m_2) - 8*pi*e_0*p_1 - 2*e_1*m_1*m_2 + e_1*m_1*(-4*m_1**2 - 2*m_2) - 8*pi*e_1*p_0 - 2*e_2*m_1**2 - e_2*m_2 - 2*m_1**2*p_2 - 2*m_1*m_2*p_1 - 8*pi*m_1*p_0**2 + m_1*p_0*(-8*pi*e_0 - 8*m_1**3 - 8*m_1*m_2) + m_1*p_1*(-4*m_1**2 - 2*m_2) + m_2*p_0*(-4*m_1**2 - 2*m_2) - m_2*p_2 - 8*pi*p_0*p_1) + r_0**3*(4*pi*e_0**2*(-4*m_1**2 - 2*m_2) - 16*pi*e_0*e_1*m_1 - 8*pi*e_0*e_2 - 16*pi*e_0*m_1*p_1 + e_0*m_1*(-32*pi*e_0*m_1 - 8*pi*e_1 - 16*m_1**4 - 24*m_1**2*m_2 - 4*m_2**2) + e_0*m_2*(-8*pi*e_0 - 8*m_1**3 - 8*m_1*m_2) + 8*pi*e_0*p_0*(-4*m_1**2 - 2*m_2) - 8*pi*e_0*p_2 - 4*pi*e_1**2 - 16*pi*e_1*m_1*p_0 + e_1*m_1*(-8*pi*e_0 - 8*m_1**3 - 8*m_1*m_2) + e_1*m_2*(-4*m_1**2 - 2*m_2) - 8*pi*e_1*p_1 - 2*e_2*m_1*m_2 + e_2*m_1*(-4*m_1**2 - 2*m_2) - 8*pi*e_2*p_0 - 2*m_1*m_2*p_2 - 16*pi*m_1*p_0*p_1 + m_1*p_0*(-32*pi*e_0*m_1 - 8*pi*e_1 - 16*m_1**4 - 24*m_1**2*m_2 - 4*m_2**2) + m_1*p_1*(-8*pi*e_0 - 8*m_1**3 - 8*m_1*m_2) + m_1*p_2*(-4*m_1**2 - 2*m_2) + m_2*p_0*(-8*pi*e_0 - 8*m_1**3 - 8*m_1*m_2) + m_2*p_1*(-4*m_1**2 - 2*m_2) + 4*pi*p_0**2*(-4*m_1**2 - 2*m_2) - 8*pi*p_0*p_2 - 4*pi*p_1**2) - m_2*p_0 - m_1*p_1 - 2*m_1**2*p_0 - e_1*m_1 - e_0*m_2 - 2*e_0*m_1**2 + O(r_0**4)"
+       "m_1*p_0/(2*m_1 - 1) + e_0*m_1/(2*m_1 - 1) + \\delta{r}*(-2*e_0*m_1*m_2/(2*m_1 - 1)**2 + e_0*m_2/(2*m_1 - 1) + e_1*m_1/(2*m_1 - 1) - 2*m_1*m_2*p_0/(2*m_1 - 1)**2 + m_1*p_1/(2*m_1 - 1) + m_2*p_0/(2*m_1 - 1)) + \\delta{r}**2*(4*pi*e_0**2/(2*m_1 - 1) + e_0*m_1*(-8*pi*e_0/(2*m_1 - 1) + 4*m_2**2/(2*m_1 - 1)**2)/(2*m_1 - 1) - 2*e_0*m_2**2/(2*m_1 - 1)**2 + 8*pi*e_0*p_0/(2*m_1 - 1) - 2*e_1*m_1*m_2/(2*m_1 - 1)**2 + e_1*m_2/(2*m_1 - 1) + e_2*m_1/(2*m_1 - 1) - 2*m_1*m_2*p_1/(2*m_1 - 1)**2 + m_1*p_0*(-8*pi*e_0/(2*m_1 - 1) + 4*m_2**2/(2*m_1 - 1)**2)/(2*m_1 - 1) + m_1*p_2/(2*m_1 - 1) - 2*m_2**2*p_0/(2*m_1 - 1)**2 + m_2*p_1/(2*m_1 - 1) + 4*pi*p_0**2/(2*m_1 - 1)) + O(\\delta{r}**3)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p_exp = p0 + p1 * r0 + p2 * r0**2\n",
-    "m_exp = m0 + m1 * r0 + m2 * r0**2\n",
+    "p_exp = p0 + p1 * r_exp + p2 * r_exp**2\n",
+    "m_exp = m0 + m1 * r_exp + m2 * r_exp**2\n",
     "exprB = dpdr.subs({p: p_exp, e:e_exp, r:r_exp, M:m_exp}) #+ O(1)\n",
-    "exprB.series(r0) + O(r0**4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle r_{0} \\left(- 2 e_{0} m_{1}^{2} - e_{0} m_{2} - e_{1} m_{1} - 2 m_{1}^{2} p_{0} - m_{1} p_{1} - m_{2} p_{0}\\right) + r_{0}^{2} \\left(- 4 \\pi e_{0}^{2} - 2 e_{0} m_{1} m_{2} + e_{0} m_{1} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 8 \\pi e_{0} p_{0} - 2 e_{1} m_{1}^{2} - e_{1} m_{2} - e_{2} m_{1} - 2 m_{1}^{2} p_{1} - 2 m_{1} m_{2} p_{0} + m_{1} p_{0} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - m_{1} p_{2} - m_{2} p_{1} - 4 \\pi p_{0}^{2}\\right) + r_{0}^{3} \\left(- 8 \\pi e_{0}^{2} m_{1} - 8 \\pi e_{0} e_{1} - 16 \\pi e_{0} m_{1} p_{0} + e_{0} m_{1} \\left(- 8 \\pi e_{0} - 8 m_{1}^{3} - 8 m_{1} m_{2}\\right) + e_{0} m_{2} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 8 \\pi e_{0} p_{1} - 2 e_{1} m_{1} m_{2} + e_{1} m_{1} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - 8 \\pi e_{1} p_{0} - 2 e_{2} m_{1}^{2} - e_{2} m_{2} - 2 m_{1}^{2} p_{2} - 2 m_{1} m_{2} p_{1} - 8 \\pi m_{1} p_{0}^{2} + m_{1} p_{0} \\left(- 8 \\pi e_{0} - 8 m_{1}^{3} - 8 m_{1} m_{2}\\right) + m_{1} p_{1} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) + m_{2} p_{0} \\left(- 4 m_{1}^{2} - 2 m_{2}\\right) - m_{2} p_{2} - 8 \\pi p_{0} p_{1}\\right) - m_{1} p_{0} - e_{0} m_{1} + O\\left(r_{0}^{4}\\right)$"
-      ],
-      "text/plain": [
-       "r_0*(-2*e_0*m_1**2 - e_0*m_2 - e_1*m_1 - 2*m_1**2*p_0 - m_1*p_1 - m_2*p_0) + r_0**2*(-4*pi*e_0**2 - 2*e_0*m_1*m_2 + e_0*m_1*(-4*m_1**2 - 2*m_2) - 8*pi*e_0*p_0 - 2*e_1*m_1**2 - e_1*m_2 - e_2*m_1 - 2*m_1**2*p_1 - 2*m_1*m_2*p_0 + m_1*p_0*(-4*m_1**2 - 2*m_2) - m_1*p_2 - m_2*p_1 - 4*pi*p_0**2) + r_0**3*(-8*pi*e_0**2*m_1 - 8*pi*e_0*e_1 - 16*pi*e_0*m_1*p_0 + e_0*m_1*(-8*pi*e_0 - 8*m_1**3 - 8*m_1*m_2) + e_0*m_2*(-4*m_1**2 - 2*m_2) - 8*pi*e_0*p_1 - 2*e_1*m_1*m_2 + e_1*m_1*(-4*m_1**2 - 2*m_2) - 8*pi*e_1*p_0 - 2*e_2*m_1**2 - e_2*m_2 - 2*m_1**2*p_2 - 2*m_1*m_2*p_1 - 8*pi*m_1*p_0**2 + m_1*p_0*(-8*pi*e_0 - 8*m_1**3 - 8*m_1*m_2) + m_1*p_1*(-4*m_1**2 - 2*m_2) + m_2*p_0*(-4*m_1**2 - 2*m_2) - m_2*p_2 - 8*pi*p_0*p_1) - m_1*p_0 - e_0*m_1 + O(r_0**4)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "# exprB.series(r_exp) + O(r_exp**3)\n",
     "p_init = exprB * r_exp \n",
-    "p_init.series(r0) + O(r0**4)"
+    "p_init.series(r_exp) + O(r_exp**3)"
    ]
   },
   {
