Manual vs Minimize comparison for phi matching (interior vs exterior)

--- a/Intro/tov_integrator_updated.ipynb
+++ b/Intro/tov_integrator_updated.ipynb
@@ -186,9 +186,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|████▉     | 49830/100000 [00:00<00:00, 70882.91it/s]/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/scipy/integrate/_ode.py:1350: UserWarning: lsoda: Excess work done on this call (perhaps wrong Dfun type).\n",
+      " 49%|████▉     | 48912/100000 [00:00<00:00, 76481.20it/s]/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/scipy/integrate/_ode.py:1350: UserWarning: lsoda: Excess work done on this call (perhaps wrong Dfun type).\n",
       "  warnings.warn('{:s}: {:s}'.format(self.__class__.__name__,\n",
-      " 51%|█████     | 50958/100000 [00:00<00:00, 59749.48it/s]\n"
+      " 51%|█████     | 50958/100000 [00:00<00:00, 60238.88it/s]\n"
      ]
     },
     {
@@ -206,7 +206,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 51%|█████     | 50958/100000 [00:00<00:00, 61574.34it/s]"
+      " 51%|█████     | 50958/100000 [00:00<00:00, 56894.86it/s]"
      ]
     },
     {
@@ -274,8 +274,7 @@
     "\n",
     "# Log base e\n",
     "phi0_schild = 0.5 * schild\n",
-    "phi0_new =  - phi[-1]\n",
-    "phi0_new = -1.0542525e28\n",
+    "phi0_new =  phi0_schild - phi[-1]\n",
     "\n",
     "\n",
     "# Repeat integration\n",
@@ -312,19 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/scipy/integrate/_ode.py:1350: UserWarning: lsoda: Excess work done on this call (perhaps wrong Dfun type).\n",
-      "  warnings.warn('{:s}: {:s}'.format(self.__class__.__name__,\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -398,15 +389,144 @@
       "2.9209e+40\n",
       "8.3509e+41\n",
       "1.4381e+38\n",
-      "Optimization terminated successfully.\n",
-      "         Current function value: 18913245761621493561497957589154004992.000000\n",
-      "         Iterations: 34\n",
-      "         Function evaluations: 69\n"
+      "1.0418e+42\n",
+      "1.5696e+41\n",
+      "1.5696e+41\n",
+      "3.9480e+42\n",
+      "3.0531e+42\n",
+      "3.0531e+42\n",
+      "4.4147e+41\n",
+      "6.1026e+39\n",
+      "6.4548e+41\n",
+      "6.5615e+41\n",
+      "6.5615e+41\n",
+      "9.2644e+41\n",
+      "6.5869e+41\n",
+      "6.5869e+41\n",
+      "1.6524e+42\n",
+      "1.6116e+40\n",
+      "7.1690e+41\n",
+      "2.2644e+41\n",
+      "2.2644e+41\n",
+      "4.3542e+41\n",
+      "5.6987e+40\n",
+      "7.6237e+39\n",
+      "3.8697e+42\n",
+      "6.9495e+41\n",
+      "3.7716e+42\n",
+      "4.8410e+38\n",
+      "7.3040e+39\n",
+      "1.9002e+42\n",
+      "1.9002e+42\n",
+      "2.6271e+40\n",
+      "6.5634e+41\n",
+      "4.5684e+40\n",
+      "6.5634e+41\n",
+      "7.7047e+41\n",
+      "7.7047e+41\n",
+      "1.7446e+42\n",
+      "4.8742e+41\n",
+      "1.0408e+42\n",
+      "3.4376e+41\n",
+      "2.7452e+41\n",
+      "1.6524e+42\n",
+      "2.7898e+40\n",
+      "1.6524e+42\n",
+      "1.0580e+42\n",
+      "1.0580e+42\n",
+      "3.5067e+42\n",
+      "1.4253e+42\n",
+      "1.4253e+42\n",
+      "1.2206e+42\n",
+      "1.5298e+42\n",
+      "1.0184e+42\n",
+      "5.4888e+41\n",
+      "2.0340e+41\n",
+      "2.2398e+41\n",
+      "4.4527e+41\n",
+      "4.4527e+41\n",
+      "4.9733e+42\n",
+      "5.1838e+40\n",
+      "6.4188e+41\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "1.0068e+42\n",
+      "2.8595e+39\n",
+      "2.8595e+39\n",
+      "Warning: Maximum number of function evaluations has been exceeded.\n"
      ]
     }
    ],
    "source": [
-    "from scipy.optimize import minimize\n",
+    "from scipy.optimize import minimize, differential_evolution\n",
     "# Load EOS\n",
     "df = pd.read_csv(\"sly230a.csv\")\n",
     "e, p = df_to_ep(df)\n",
@@ -451,16 +571,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.0542524099349922e+28\n",
+      "-1.0542525e+28\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res.x[0])\n",
+    "print(phi0_new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that the optimized value is almost identival to the one computer manually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 51%|█████     | 50622/100000 [00:00<00:00, 66911.60it/s]/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/scipy/integrate/_ode.py:1350: UserWarning: lsoda: Excess work done on this call (perhaps wrong Dfun type).\n",
+      " 51%|█████     | 50943/100000 [00:00<00:00, 55769.76it/s]/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/scipy/integrate/_ode.py:1350: UserWarning: lsoda: Excess work done on this call (perhaps wrong Dfun type).\n",
       "  warnings.warn('{:s}: {:s}'.format(self.__class__.__name__,\n",
-      " 51%|█████     | 50958/100000 [00:00<00:00, 61440.91it/s]"
+      " 51%|█████     | 50958/100000 [00:00<00:00, 59967.72it/s]"
      ]
     },
     {
@@ -483,7 +629,7 @@
     }
    ],
    "source": [
-    "phi0_optimized = res.x\n",
+    "phi0_optimized = res.x[0]\n",
     "\n",
     "# Repeat integration\n",
     "init_VEC = [p_c, m0, phi0_optimized]\n",
@@ -512,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
