--- a/Intro/Taylor Expansion of TOV (Initial Conditions) .ipynb
+++ b/Intro/Taylor Expansion of TOV (Initial Conditions) .ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "r*(-4*pi*e_0**2/3 - 16*pi*e_0*p_0/3 - 4*pi*p_0**2) + r**2*(-16*pi*e_0*p_1/3 - 8*pi*p_0*p_1) + r**3*(-32*pi**2*e_0**3/9 - 128*pi**2*e_0**2*p_0/9 - 32*pi**2*e_0*p_0**2/3 - 16*pi*e_0*p_2/3 - 8*pi*p_0*p_2 - 4*pi*p_1**2) + O(r**4)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,19 +478,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle r \\left(- \\frac{4 \\pi e_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} - 4 \\pi p_{0}^{2}\\right) + r^{3} \\left(\\frac{16 \\pi^{2} e_{0}^{2} p_{0}}{3} + 32 \\pi^{2} e_{0} p_{0}^{2} + 32 \\pi^{2} p_{0}^{3}\\right) + O\\left(r^{4}\\right)$"
+       "$\\displaystyle r \\left(- \\frac{4 \\pi e_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} - 4 \\pi p_{0}^{2}\\right) + r^{3} \\left(- \\frac{32 \\pi^{2} e_{0}^{3}}{9} - \\frac{128 \\pi^{2} e_{0}^{2} p_{0}}{9} - \\frac{32 \\pi^{2} e_{0} p_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{2}}{3} - 8 \\pi p_{0} p_{2}\\right) + O\\left(r^{4}\\right)$"
       ],
       "text/plain": [
-       "r*(-4*pi*e_0**2/3 - 16*pi*e_0*p_0/3 - 4*pi*p_0**2) + r**3*(16*pi**2*e_0**2*p_0/3 + 32*pi**2*e_0*p_0**2 + 32*pi**2*p_0**3) + O(r**4)"
+       "r*(-4*pi*e_0**2/3 - 16*pi*e_0*p_0/3 - 4*pi*p_0**2) + r**3*(-32*pi**2*e_0**3/9 - 128*pi**2*e_0**2*p_0/9 - 32*pi**2*e_0*p_0**2/3 - 16*pi*e_0*p_2/3 - 8*pi*p_0*p_2) + O(r**4)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "p_0 - 2*pi*r_0**2*(e_0 + p_0)*(e_0 + 3*p_0)/3"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,19 +535,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle r \\left(- \\frac{4 \\pi e_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} - 4 \\pi p_{0}^{2}\\right) + r^{3} \\left(\\frac{16 \\pi^{2} e_{0}^{2} p_{0}}{3} + 32 \\pi^{2} e_{0} p_{0}^{2} + 32 \\pi^{2} p_{0}^{3}\\right) + O\\left(r^{4}\\right)$"
+       "$\\displaystyle r \\left(- \\frac{4 \\pi e_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} - 4 \\pi p_{0}^{2}\\right) + r^{3} \\left(- \\frac{32 \\pi^{2} e_{0}^{3}}{9} - \\frac{128 \\pi^{2} e_{0}^{2} p_{0}}{9} - \\frac{32 \\pi^{2} e_{0} p_{0}^{2}}{3} - \\frac{16 \\pi e_{0} p_{0}}{3} + \\frac{32 \\pi^{2} e_{0} r_{0}^{2} \\left(e_{0} + p_{0}\\right) \\left(e_{0} + 3 p_{0}\\right)}{9} - 8 \\pi p_{0}^{2} + \\frac{16 \\pi^{2} p_{0} r_{0}^{2} \\left(e_{0} + p_{0}\\right) \\left(e_{0} + 3 p_{0}\\right)}{3}\\right) + O\\left(r^{4}\\right)$"
       ],
       "text/plain": [
-       "r*(-4*pi*e_0**2/3 - 16*pi*e_0*p_0/3 - 4*pi*p_0**2) + r**3*(16*pi**2*e_0**2*p_0/3 + 32*pi**2*e_0*p_0**2 + 32*pi**2*p_0**3) + O(r**4)"
+       "r*(-4*pi*e_0**2/3 - 16*pi*e_0*p_0/3 - 4*pi*p_0**2) + r**3*(-32*pi**2*e_0**3/9 - 128*pi**2*e_0**2*p_0/9 - 32*pi**2*e_0*p_0**2/3 - 16*pi*e_0*p_0/3 + 32*pi**2*e_0*r_0**2*(e_0 + p_0)*(e_0 + 3*p_0)/9 - 8*pi*p_0**2 + 16*pi**2*p_0*r_0**2*(e_0 + p_0)*(e_0 + 3*p_0)/3) + O(r**4)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,10 +559,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_{0} - \\frac{2 \\pi r_{0}^{2} \\left(e_{0} + p_{0}\\right) \\left(e_{0} + 3 p_{0}\\right)}{3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy.printing as printing\n",
+    "print(printing.latex(p2_new))"
+   ]
   },
   {
    "cell_type": "code",
