--- a/Intro/tov_integrator.ipynb
+++ b/Intro/tov_integrator.ipynb
@@ -181,9 +181,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 3301/10000 [00:00<00:00, 32847.06it/s]/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/scipy/integrate/_ode.py:1350: UserWarning: lsoda: Excess work done on this call (perhaps wrong Dfun type).\n",
+      " 33%|███▎      | 3296/10000 [00:00<00:00, 32839.77it/s]/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/scipy/integrate/_ode.py:1350: UserWarning: lsoda: Excess work done on this call (perhaps wrong Dfun type).\n",
       "  warnings.warn('{:s}: {:s}'.format(self.__class__.__name__,\n",
-      " 34%|███▍      | 3398/10000 [00:00<00:00, 11891.30it/s]"
+      " 34%|███▍      | 3398/10000 [00:00<00:00, 12129.38it/s]"
      ]
     },
     {
@@ -244,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 34%|███▍      | 3398/10000 [00:00<00:00, 11835.14it/s]"
+      " 34%|███▍      | 3398/10000 [00:00<00:00, 11307.40it/s]"
      ]
     },
     {
@@ -344,7 +344,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29/29 [00:05<00:00,  5.06it/s]\n"
+      "100%|██████████| 29/29 [00:05<00:00,  4.88it/s]\n"
      ]
     }
    ],
@@ -455,16 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 1/4 [00:05<00:17,  5.71s/it]/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/scipy/integrate/_ode.py:1350: UserWarning: lsoda: Excess work done on this call (perhaps wrong Dfun type).\n",
+      " 25%|██▌       | 1/4 [00:05<00:15,  5.02s/it]/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/scipy/integrate/_ode.py:1350: UserWarning: lsoda: Excess work done on this call (perhaps wrong Dfun type).\n",
       "  warnings.warn('{:s}: {:s}'.format(self.__class__.__name__,\n",
-      "100%|██████████| 4/4 [00:57<00:00, 14.26s/it]\n"
+      "100%|██████████| 4/4 [01:02<00:00, 15.66s/it]\n"
      ]
     },
     {
@@ -554,6 +554,7 @@
     "plt.ylabel(\"M/Msun\")\n",
     "utkarshGrid()\n",
     "plt.legend()\n",
+    "plt.savefig(\"mr.pdf\")\n",
     "plt.show()"
    ]
   },
