--- a/cowling_approximation2.ipynb
+++ b/cowling_approximation2.ipynb
@@ -625,52 +625,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Delete when shifting over to python\n",
-    "# old_backend = mpl.get_backend() \n",
-    "# %matplotlib notebook \n",
-    "# # ====================================================================================\n",
-    "# fig = plt.figure()\n",
-    "# ax = fig.add_subplot(111)\n",
-    "# plt.ion()\n",
-    "# fig.show()\n",
-    "# fig.canvas.draw()\n",
-    "# plt.xlabel(\"f-mode (kHz)\")\n",
-    "# plt.ylabel(\"log boundary value\")\n",
+    "# Delete when shifting over to python\n",
+    "old_backend = mpl.get_backend() \n",
+    "%matplotlib notebook \n",
+    "# ====================================================================================\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "plt.ion()\n",
+    "fig.show()\n",
+    "fig.canvas.draw()\n",
+    "plt.xlabel(\"f-mode (kHz)\")\n",
+    "plt.ylabel(\"log boundary value\")\n",
     "\n",
-    "# def minimize_boundary(params, p = p, EOS = EOS):\n",
-    "#     # Repeat integration\n",
+    "def minimize_boundary(params, p = p, EOS = EOS):\n",
+    "    # Repeat integration\n",
     "     \n",
-    "#     omega = params\n",
+    "    omega = params\n",
     "\n",
-    "#     # Integrate\n",
-    "#     p, m, r_arr, phi, w, v = p, m, r_arr, v, w, u = tov(EOS, init_VEC, r_i, p_min, omega, dedp_EQ, l = l)\n",
+    "    # Integrate\n",
+    "    p, m, r_arr, phi, w, v = p, m, r_arr, v, w, u = tov(EOS, init_VEC, r_i, p_min, omega, dedp_EQ, l = l)\n",
     "    \n",
-    "#     max_idx = np.argmax(m)\n",
-    "#     m_R = m.max() # In units of msun\n",
-    "#     r_R = r_arr[max_idx] # In units of km\n",
-    "#     p_R = p[max_idx] #cgs\n",
-    "#     ec_R = EOS(p_R) #cgs\n",
-    "#     u_R = u[max_idx] #cgs\n",
-    "#     v_R = v[max_idx]\n",
-    "#     w_R = w[max_idx]\n",
+    "    max_idx = np.argmax(m)\n",
+    "    m_R = m.max() # In units of msun\n",
+    "    r_R = r_arr[max_idx] # In units of km\n",
+    "    p_R = p[max_idx] #cgs\n",
+    "    ec_R = EOS(p_R) #cgs\n",
+    "    u_R = u[max_idx] #cgs\n",
+    "    v_R = v[max_idx]\n",
+    "    w_R = w[max_idx]\n",
     "    \n",
-    "#     loss = np.log10(abs(boundary_wu(r_R, m_R, omega, w_R, u_R)))\n",
-    "#     ax.scatter(omega/(2*np.pi), loss, color = \"dodgerblue\", marker = \"x\")\n",
-    "#     fig.canvas.draw()\n",
-    "#     return loss\n",
+    "    loss = np.log10(abs(boundary_wu(r_R, m_R, omega, w_R, u_R)))\n",
+    "    ax.scatter(omega/(2*np.pi), loss, color = \"dodgerblue\", marker = \"x\")\n",
+    "    fig.canvas.draw()\n",
+    "    return loss\n",
     "\n",
-    "# omega_guess = 2e3*(2*np.pi)\n",
-    "# init_guess = [omega_guess]\n",
-    "# res = minimize(minimize_boundary, x0 = init_guess, method='Nelder-Mead', \n",
-    "#                options = {\"disp\": True, \"maxiter\":25},\n",
-    "#                tol = 1)\n",
+    "omega_guess = 2e3*(2*np.pi)\n",
+    "init_guess = [omega_guess]\n",
+    "res = minimize(minimize_boundary, x0 = init_guess, method='Nelder-Mead', \n",
+    "               options = {\"disp\": True, \"maxiter\":25},\n",
+    "               tol = 1)\n",
     "\n",
-    "# mpl.use(old_backend) # Delete when shifting over to python\n",
-    "# display(res)\n",
-    "# omg = res.x[0]\n",
-    "# f = omg/(2*np.pi)\n",
-    "# print(f\"omega: {omg:.0f}\")\n",
-    "# print(f\"fmode: {f:.2f} Hz\")"
+    "mpl.use(old_backend) # Delete when shifting over to python\n",
+    "display(res)\n",
+    "omg = res.x[0]\n",
+    "f = omg/(2*np.pi)\n",
+    "print(f\"omega: {omg:.0f}\")\n",
+    "print(f\"fmode: {f:.2f} Hz\")"
    ]
   },
   {
@@ -679,27 +679,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# p, m, r_arr, v, w, u = tov(EOS, init_VEC, r_i, p_min, omg, dedp_EQ, progress = True, l = l)\n",
+    "p, m, r_arr, v, w, u = tov(EOS, init_VEC, r_i, p_min, omg, dedp_EQ, progress = True, l = l)\n",
     "\n",
-    "# max_idx = np.argmax(m)\n",
-    "# m_R = m.max() # In units of msun\n",
-    "# r_R = r_arr[max_idx] # In units of km\n",
-    "# p_R = p[max_idx] #cgs\n",
-    "# ec_R = EOS(p_R) #cgs\n",
-    "# u_R = u[max_idx] #cgs\n",
-    "# v_R = v[max_idx]\n",
-    "# w_R = w[max_idx]\n",
+    "max_idx = np.argmax(m)\n",
+    "m_R = m.max() # In units of msun\n",
+    "r_R = r_arr[max_idx] # In units of km\n",
+    "p_R = p[max_idx] #cgs\n",
+    "ec_R = EOS(p_R) #cgs\n",
+    "u_R = u[max_idx] #cgs\n",
+    "v_R = v[max_idx]\n",
+    "w_R = w[max_idx]\n",
     "\n",
-    "# schild = (1-2*G*m_R/(c**2*r_R))\n",
-    "# interior = np.exp(v_R)\n",
+    "schild = (1-2*G*m_R/(c**2*r_R))\n",
+    "interior = np.exp(v_R)\n",
     "\n",
-    "# print(\"== Corrected Integration == \")\n",
-    "# print(f\"Star has mass {m_R/msun:.1f} Msun and radius {r_R/km2cm:.1f}km\")\n",
-    "# print(f\"Interior Surface: {interior:.4f}\")\n",
-    "# print(f\"Exterior Surface: {schild:.4f}\")\n",
-    "# print(f\"v0 Round 1: {v0}\")\n",
-    "# print(f\"Lamda Round 1: {lamba_metric(m_R, r_R)}\")\n",
-    "# print(f\"Boundary Term: {boundary_wu(r_R, m_R, omega, w_R, u_R)}\")"
+    "print(\"== Corrected Integration == \")\n",
+    "print(f\"Star has mass {m_R/msun:.1f} Msun and radius {r_R/km2cm:.1f}km\")\n",
+    "print(f\"Interior Surface: {interior:.4f}\")\n",
+    "print(f\"Exterior Surface: {schild:.4f}\")\n",
+    "print(f\"v0 Round 1: {v0}\")\n",
+    "print(f\"Lamda Round 1: {lamba_metric(m_R, r_R)}\")\n",
+    "print(f\"Boundary Term: {boundary_wu(r_R, m_R, omega, w_R, u_R)}\")"
    ]
   }
  ],
