Zerilli Equation (Backup)

--- a/sympy.ipynb
+++ b/sympy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -19,6 +19,7 @@
     "init_printing(use_latex='mathjax')\n",
     "r = symbols(\"r\")\n",
     "m = Function(\"m\")(r)\n",
+    "nu = Function(r\"\\nu\")(r)\n",
     "p = Function(\"p\")(r)\n",
     "b = Function(\"b\")(r)\n",
     "Q = Function(\"Q\")(r)\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +116,97 @@
     "      .subs(m, symbols(\"m\"))\\\n",
     "      .subs(p, symbols(\"P\")))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{e^{\\frac{\\lambda{\\left(r \\right)}}{2}} \\frac{d}{d r} \\nu{\\left(r \\right)}}{r^{2}}$"
+      ],
+      "text/plain": [
+       " \\lambda(r)           \n",
+       " ──────────           \n",
+       "     2      d         \n",
+       "ℯ          ⋅──(\\nu(r))\n",
+       "            dr        \n",
+       "──────────────────────\n",
+       "           2          \n",
+       "          r           "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{e^{\\frac{1}{2 \\sqrt{- \\frac{2 G m{\\left(r \\right)}}{c^{2} r} + 1}}} \\frac{d}{d r} \\nu{\\left(r \\right)}}{r^{2}}$"
+      ],
+      "text/plain": [
+       "            1                      \n",
+       " ───────────────────────           \n",
+       "        ________________           \n",
+       "       ╱   2⋅G⋅m(r)                \n",
+       " 2⋅   ╱  - ──────── + 1            \n",
+       "     ╱        2                    \n",
+       "   ╲╱        c ⋅r        d         \n",
+       "ℯ                       ⋅──(\\nu(r))\n",
+       "                         dr        \n",
+       "───────────────────────────────────\n",
+       "                  2                \n",
+       "                 r                 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b_sub = G * m / (c**2 * r)\n",
+    "Q_sub = b + 4 * pi * G * (r**2)/(c**4) * p\n",
+    "lamda_sub = 1/sqrt(1-2*b)\n",
+    "dnudr = nu.diff(r)\n",
+    "expr = exp(lamda/2)*dnudr/(r**2)\n",
+    "display(expr)\n",
+    "expr = expr.subs(Q, Q_sub)\n",
+    "expr = expr.subs(lamda, lamda_sub)\n",
+    "expr = expr.subs(b, b_sub)\n",
+    "display(expr)\n",
+    "dr_expr = simplify(expr.diff(r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(G*(dMdr*r - m)*Derivative(\\nu(r), r)/2 + c**2*r**2*((-2*G*m + c**2*r)/(c**2*r))**(3/2)*Derivative(\\nu(r), (r, 2)) - 2*c**2*r*((-2*G*m + c**2*r)/(c**2*r))**(3/2)*Derivative(\\nu(r), r))*exp(1/(2*sqrt((-2*G*m + c**2*r)/(c**2*r))))/(c**2*r**4*((-2*G*m + c**2*r)/(c**2*r))**(3/2))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dr_expr\\\n",
+    "      .subs(m.diff(r), symbols(\"dMdr\"))\\\n",
+    "      .subs(p.diff(r), symbols(\"dPdr\"))\\\n",
+    "#       .subs(nu.diff(r), symbols(\"dnudr\"))\\\n",
+    "      .subs(m, symbols(\"m\"))\\\n",
+    "      .subs(p, symbols(\"P\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
