--- a/sympy.ipynb
+++ b/sympy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -203,10 +203,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2*G*m/(c**2*r**2*(-2*G*m/(c**2*r) + 1)**2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# k = 1/(1-2*b)\n",
+    "# print(k.subs(b, b_sub)\\\n",
+    "#          .diff(r)\\\n",
+    "#          .subs(m.diff(r), 0)\\\n",
+    "#          .subs(m, symbols(\"m\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2*G*c**2*m/(2*G*m - c**2*r)**2\n"
+     ]
+    }
+   ],
+   "source": [
+    "m_R = m\n",
+    "r_star = r + 2 * (G/(c**2)) * m_R * log((r*(c**2))/(2*G*m_R) - 1)\n",
+    "print(r_star.diff(r).diff(r).subs(m.diff(r), 0).simplify().subs(m, symbols(\"m\")))"
+   ]
   }
  ],
  "metadata": {
