Zerilli (Matching solutions between 1983ApJS...53...73L and arXiv2204.03037)

--- a/GR2.ipynb
+++ b/GR2.ipynb
@@ -381,7 +381,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "062c49deb33e41799d7016f7ba91c8ab",
+       "model_id": "901c70529a244fceb58f73fbac7ce673",
        "version_major": 2,
        "version_minor": 0
       },
@@ -409,7 +409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce2ae61cb3fc4d7188c02397a3095828",
+       "model_id": "5dca7dfccb3b456a97976bc68315936c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,7 +437,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef842da0e1fe44878d571aed33912c47",
+       "model_id": "6ce5739c6a2b4d64a08320abdc883b0a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1574,7 +1574,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bed1923653e4e36abf87c223bfbfce9",
+       "model_id": "421a1715a7db4c8592dc41d69997ab86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1750,7 +1750,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38232374308740aa9a2f94ea109c4d78",
+       "model_id": "ea8ccfbb74e8463ba4b97aa50bfe74fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1894,7 +1894,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.5708885486324972e-07, 1.4594427957702462e-13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "K_R = k_R\n",
+    "num = h1_R - _k(r_R, m_R, nl) * K_R\n",
+    "dem = (h(r_R, m_R, nl) - _k(r_R, m_R, nl) * g(r_R, m_R, nl))\n",
+    "z_R = r_R*num/dem\n",
+    "dzdR_R = (K_R - g(r_R, m_R, nl)*z_R/r_R)\n",
+    "z0 = [z_R, dzdR_R] \n",
+    "print(z0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1932,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2028,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2068,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -2093,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2119,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2139,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -2159,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2178,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -2232,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
